[IMP] Add the possibility to have more than 1 vehicle by PO
Initially, there was only one vehicle for one PO.
Now, if the vehicle is set on the PO, all the PO lines are related to this vehicle
But if the vehicle is not set on the PO, the user can decide to have different vehicles on every line.
Use case is a grouped purchase of several items for several vehicles.

--- a/fleet_vehicle_purchase/views/purchase_order.xml
+++ b/fleet_vehicle_purchase/views/purchase_order.xml
@@ -11,6 +11,17 @@
             <field name="partner_ref" position="after">
                 <field name="fleet_vehicle_id" />
             </field>
+            <xpath
+                expr="//sheet//notebook//page[@name='products']//tree//field[@name='date_planned']"
+                position="after"
+            >
+                <field name="fleet_vehicle_from_po" invisible="1" />
+                <field
+                    name="fleet_vehicle_id"
+                    optional="hide"
+                    attrs="{'readonly': [('fleet_vehicle_from_po', '=', True)]}"
+                />
+            </xpath>
         </field>
     </record>
 
